--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "axios": "^0.24.0",
     "history": "^5.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-final-form": "^6.5.7",
-    "react-redux": "^7.2.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-form": "^8.3.7",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.0",
+    "theme-ui": "^0.11.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
