--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@theme-ui/presets": "^0.11.3",
     "axios": "^0.24.0",
     "history": "^5.0.1",
     "prop-types": "^15.7.2",
