--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@theme-ui/presets": "^0.11.3",
     "axios": "^0.24.0",
+    "baseui": "^10.5.0",
     "history": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.4.0",
-    "theme-ui": "^0.11.3",
+    "styletron-engine-atomic": "^1.4.8",
+    "styletron-react": "^6.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -56,6 +57,7 @@
     "@babel/preset-react": "^7.14.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-baseui": "^10.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
