--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest-mock-axios": "^4.4.1",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4",
     "stylelint": "^13.13.1",
